# eralovev2

./: .cursorrules  .env.example  .gitignore  AGENTS.md  Eralove.txt  Eralove_v2.txt  FEATURES.md  Makefile  package-lock.json  package.json  pyproject.toml  turbo.json
.claude/: settings.local.json
.claude/rules/: caching-performance.md  clean-architecture.md  code-change-discipline.md  feature-workflow.md  frontend-patterns.md  nextjs-patterns.md  observability.md  python-fastapi.md  restful-api.md  security-rules.md  socketio-realtime.md  unit-testing.md
.claude/skills/: create-celery-task.md  create-migration.md  create-nextjs-page.md  create-redis-cache.md  create-socketio-handler.md  create-use-case.md  create-zustand-store.md  debug-api.md  deploy.md
.cursor/rules/: celery-rules.md  database-rules.md  frontend-patterns.md  nextjs-patterns.md  observability.md  python-fastapi.md  restful-api.md  security-rules.md  soft-delete.md  testing-rules.md  unit-testing.md
.cursor/skills/: create-api-endpoint.md  create-celery-task.md  create-component.md  create-feature.md  create-nextjs-page.md  create-redis-cache.md  create-socketio-handler.md  create-use-case.md  create-zustand-store.md  debug-api.md  deploy.md  setup-python-env.md
apps/api/: Dockerfile  alembic.ini  requirements-dev.txt  requirements.txt
apps/web/: package.json
deploy/: api.Dockerfile  docker-compose.prod.yml  web.Dockerfile
docs/plan/: api-design.md  architecture.md  database-schema.md  phase1-mvp.md  phase2-core.md  phase3-polish.md  (+1 more)
infra/: docker-compose.yml
scripts/: setup-local.ps1
(+171 files in other folders)
